--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -5,11 +5,18 @@
 
   .title {
     font-size: 28px;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
   }
 
   .preview {
     display: flex;
     justify-content: space-between;
+  }
+  .my-link {
+    font-size: 16px;
+    border: 1px solid black;
+    width: 100px;
+    text-align: center;
+    margin-bottom: 15px;
   }
 }
